Closed Bug 1751935 Opened 2 years ago Closed 2 years ago

Making PIP smaller from the top or the corners permanently adds black bars to the sides

Categories

(Toolkit :: Picture-in-Picture, defect)

x86_64
Windows 10
defect
Points:
2

Tracking

()

VERIFIED FIXED
99 Branch
Tracking Status
firefox96 --- wontfix
firefox97 --- wontfix
firefox98 --- wontfix
firefox99 --- verified

People

(Reporter: Galomercer, Assigned: enndeakin)

References

Details

(Whiteboard: [fidefe-quality-foundation])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:96.0) Gecko/20100101 Firefox/96.0

Steps to reproduce:

Open up video in PIP
Resize it to the minimum using the top/bottom edge or any corner
Resize it back to a bigger size

Actual results:

Two black bars will be permanently visible on the sides until PIP is closed and re-opened

Expected results:

The PIP should've stayed with a regular aspect ratio.

It seems that the file didn't attach, so I'll leave it here

https://www.youtube.com/watch?v=7M10sIrWRlo

Component: Untriaged → Theme
OS: Unspecified → Windows 10
Hardware: Unspecified → x86_64

Hello I have managed to reproduce the issue with firefox 98.0a1(2022-01-26), 97.0b8 and 96.0.2 on Windows 10 x64. I will set this issue to NEW and will add a component to in in order for our developers to look more into it. If it's not the right component please feel free to change it to an appropriate one.

Thank you!

Severity: -- → S3
Status: UNCONFIRMED → NEW
Has Regression Range: --- → no
Has STR: --- → yes
Component: Theme → Audio/Video: Playback
Ever confirmed: true
Product: Firefox → Core
Version: Firefox 96 → Trunk
Component: Audio/Video: Playback → Picture-in-Picture
Product: Core → Toolkit

(In reply to Negritas Sergiu from comment #2)

Hello I have managed to reproduce the issue with firefox 98.0a1(2022-01-26), 97.0b8 and 96.0.2 on Windows 10 x64. I will set this issue to NEW and will add a component to in in order for our developers to look more into it. If it's not the right component please feel free to change it to an appropriate one.

Thank you!

It seems to be fixed now, so feel free to close this bug.

(In reply to Galo from comment #3)

(In reply to Negritas Sergiu from comment #2)

Hello I have managed to reproduce the issue with firefox 98.0a1(2022-01-26), 97.0b8 and 96.0.2 on Windows 10 x64. I will set this issue to NEW and will add a component to in in order for our developers to look more into it. If it's not the right component please feel free to change it to an appropriate one.

Thank you!

It seems to be fixed now, so feel free to close this bug.

Nevermind, I was wrong.

I can reproduce this as well; in fact I did it by accident, I wasn't even trying. At least one way this can happen appears to be that, while shrinking the window, we arrive at the window's minimum width before the minimum height (for a 16:9 video), but we do not notice that and we just keep on resizing down anyway. That's what creates the pillarbox. Then when you expand the window again, we try to ensure that the aspect ratio of the window does not change (a check that evidently does not come into play when either of the dimensions is already at the minimum). So the bars stay in place permanently from there.

Also, I don't think this is a PIP bug, I think this is a widget bug. The aspect ratio locking logic is in widget code, so I'd expect any window using the lockaspectratio feature to run into this bug. Fortunately I can't actually find any more windows that do that, so this bug is effectively limited to PIP, even though that isn't where it's being caused. I'm not moving this bug over there though, so that it stays in the frontend team's triage lists, which I think is appropriate because we're the only really affected team (and because, realistically, it's probably going to be me working on the thing anyway).

Whiteboard: [fidefe-quality-foundation]
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Pushed by neil@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3e474bf6eab0
ensure size constraints are accounted for when applying aspect ratio on Windows, r=cmartin
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
Points: --- → 2
QA Whiteboard: [qa-99b-p2]
See Also: → 1760289

Reproduced this issue on an affected Nightly build 98.0a1 (20220125100058), on Win 10 x64.
Verified as fixed on Firefox 99.0b8 (20220324185704) on the same platform.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: