Bug 1751935, ensure size constraints are accounted for when applying aspect ratio on Windows, r=cmartin

Differential Revision: https://phabricator.services.mozilla.com/D140062